# henceforth

./: ArithmeticDefinitions.cpp  ArithmeticDefinitions.hpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  CompilerDefinitions.cpp  CompilerDefinitions.hpp  Core.cpp  Core.hpp  CoreDefinitions.cpp  CoreDefinitions.hpp  Definition.cpp  Definition.hpp  Exceptions.hpp  Interpreter.cpp  Interpreter.hpp  README.md  StackObject.cpp  StackObject.hpp  Tokenizer.cpp  Tokenizer.hpp  examples.fth  main.cpp
